added instructions on useing external call mock

--- a/extrenal_request_mock/index.html
+++ b/extrenal_request_mock/index.html
@@ -8,6 +8,8 @@
 
     </head>
     <body>
+	<h2>Simulation of calling pdf api from an external site.</h2>
+	<p>This application posts a request through to the application server. If you're running the application from the included vagrant box, this will work as is. Otherwise, you'll need to tweak the href and action settings to point correctly.</p>
         <a href="http://192.168.33.101:9999/form"><h2>Clear Request</h2></a>
         <form method="POST" action="http://192.168.33.101:9999/form">
             <textarea name="data" id="data" style="width:80%;height:500px;margin: 0 10%;"></textarea>
